--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
+    "babel-jest": "^26.0.0",
+    "babel-preset-gatsby": "^0.4.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1"
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.0",
+    "react-test-renderer": "^16.13.1"
   },
   "keywords": [
     "gatsby"
@@ -38,7 +43,7 @@
     "lint:fix": "eslint --fix --ext .jsx --ext .js .",
     "serve": "gatsby serve",
     "start": "npm run develop",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
