--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-table": "^7.0.4"
   },
   "devDependencies": {
     "babel-jest": "^26.0.0",
