--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-manifest": "^2.4.0",
@@ -32,8 +33,10 @@
     "gatsby-transformer-sharp": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-icons": "^3.10.0",
     "react-table": "^7.0.4"
   },
   "devDependencies": {
