--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-sharp": "^2.5.0",
     "prop-types": "^15.7.2",
+    "rc-slider": "^9.2.4",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
